...
          if (provider.isLoading) {
            return const Center(child: CircularProgressIndicator());
          }

          // tampilkan pesan kalau belum ada favorite
          if (provider.favorites.isEmpty) {
            return const Center(child: Text('Belum ada restoran favorit'));
          }

          // tampilkan list restaurant favorite
          return ListView.builder(
            physics: const AlwaysScrollableScrollPhysics(),
            itemCount: provider.favorites.length,
...
